chore: updated doc

--- a/assignment/src/covid-vaccine-assign.ipynb
+++ b/assignment/src/covid-vaccine-assign.ipynb
@@ -5,12 +5,13 @@
    "metadata": {},
    "source": [
     "# Import Required Libraries\n",
-    "Import all necessary libraries including numpy, pandas, gurobipy, matplotlib, and seaborn."
+    "Import all necessary libraries including numpy, pandas, gurobipy, matplotlib, and seaborn.\n",
+    "####    **Important:** Please use python 3.10 for this notebook"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
